<resources>
    <string name="app_name">OnlineShop</string>
    <string name="title_home">خانه</string>
    <string name="title_category">دسته بندی ها</string>
    <string name="first_and_last_name_hint">نام و نام خانوادگی</string>
    <string name="your_review_hint">دیدگاه</string>
    <string name="score_hint">از یک تا پنج امتیاز دهید</string>
    <string name="title_cart">سبد خرید</string>
    <string name="register_review">ثبت دیدگاه</string>
    <string name="title_account">حساب کاربری</string>
    <string name="confirmation">تایید</string>
    <string name="sort">مرتب سازی</string>
    <string name="no_account">حساب کاربری برای شما ثبت نشده است</string>
    <string name="your_address">آدرس شما</string>
    <string name="address_hint">آدرس شما</string>
    <string name="search_hint">جستجو</string>
    <string name="save">ذخیره</string>
    <string name="best_product_title">بهترین محصولات</string>
    <string name="by_default">پیش فرض</string>
    <string name="successful_register">ثبت نام شما با موفقیت انجام شد</string>
    <string name="account_exist">یک حساب با آدرس پست الکترونیک شما قبلا ثبت شده است</string>
    <string name="no_exist_account">حسابی با این پست الکترونیک وجود ندارد</string>
    <string name="latest_product_title">جدیدترین محصولات</string>
    <string name="new_product_title">محصول جدید</string>
    <string name="new_product_text">محصول جدید رسید</string>
    <string name="wrong_discount_code">کد تخفیف نادرست می باشد</string>
    <string name="enter_email">لطفا پست الکترونیک خود را وارد کنید</string>
    <string name="review">نقد و نظرات</string>
    <string name="address">آدرس ها</string>
    <string name="channel_id">maktab_channel_id</string>
    <string name="channel_name">Maktab_Channel</string>
    <string name="channel_description">This is notification channel for maktab</string>
    <string name="successful_post_review">نظر شما با موفقیت ثبت شد</string>
    <string name="failed_post_review">متاسفانه ثبت نظر شما موفقیت آمیز نبود</string>
    <string name="account_information">اطلاعات حساب کاربری</string>
    <string name="on_notification">محصولات جدید را به من اطلاع دهید</string>
    <string name="title_search">جستجو</string>
    <string name="setting">تنظیمات</string>
    <string name="setting_notification">تنظیمات اعلان</string>
    <string name="log_out">خروج از حساب کاربری</string>
    <string name="cancel">لغو کردن</string>
    <string name="save_setting">ذخیره تنظیمات</string>
    <string name="log_out_question">آیا می خواهید از حساب کاربری خود خارج شوید؟</string>
    <string name="common">بیخیال</string>
    <string name="every_3_hours">هر سه ساعت</string>
    <string name="every_5_hours">هر پنج ساعت</string>
    <string name="every_8_hours">هر هشت ساعت</string>
    <string name="every_12_hours">هر دوازده ساعت</string>
    <string name="edit">ویرایش</string>
    <string name="title_add_to_cart">افزودن به سبد خرید</string>
    <string name="final_registration_order">ثبت نهایی سفارش</string>
    <string name="successful_final_registration_order">سفارش شما با موفقیت ثبت شد</string>
    <string name="failed_final_registration_order">متاسفانه ثبت سفارش شما موفقیت آمیز نبود</string>
    <string name="login_description">برای ورود پست الکترونیک خود را وارد نمایید</string>
    <string name="empty_discount_code">لطفا کد تخفیف خود را وارد کنید</string>
    <string name="most_visited_product_title">پربازدیدترین محصولات</string>
    <string name="special_product_title">محصولات ویژه</string>
    <string name="see_all">مشاهده همه</string>
    <string name="login">ورود</string>
    <string name="enter_request_information">لطفا اطلاعات خواسته شده را وارد کنید</string>
    <string name="register">ثبت نام</string>
    <string name="email_hint">پست الکترونیک</string>
    <string name="amount_paid_with_discount">جمع مبلغ پرداختی با احتساب 10 درصد تخفیف:</string>
    <string name="in_stock">instock</string>
    <string name="available_in_stock">موجود در انبار</string>
    <string name="not_available_in_stock">در انبار موجود نیست</string>
    <string name="ziro">0</string>
    <string name="add_review">افزودن نظر</string>
    <string name="number">1</string>
    <string name="total_amount_paid">جمع مبلغ پرداختی:</string>
    <string name="final_confirmation">تایید نهایی سبد خرید</string>
    <string name="discount_code">کد تخفیف</string>
    <string name="review_title">نظرات کاربران</string>
    <string name="currency">تومان</string>
    <string name="total">مجموع</string>
    <string name="continue_the_buying_process">ادامه فرایند خرید</string>
    <string name="specifications">مشخصات کلی</string>
    <string name="add_to_cart">افزودن به سبد خرید</string>
    <string name="text_sale">1 در سبد شما</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="welcome">"Welcome!"</string>
    <string name="invalid_username">Not a valid username</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login failed"</string>
    <string name="title_activity_maps">Map</string>
</resources>