<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface"
        android:orientation="vertical"
        tools:context=".view.fragment.SettingFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="32dp"
            android:text="@string/setting"
            android:textColor="@color/black"
            android:textSize="20sp" />

        <Button
            android:id="@+id/btn_setting_notification"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="16dp"
            android:text="@string/setting_notification"
            android:textColor="@color/on_surface"
            android:textSize="16sp"
            app:icon="@drawable/ic_bell" />

        <Button
            android:id="@+id/btn_log_out"
            style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="right"
            android:padding="16dp"
            android:text="@string/log_out"
            android:textColor="@color/on_surface"
            android:textSize="16sp"
            app:icon="@drawable/ic_log_out" />

    </LinearLayout>

</layout>