<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="review"
            type="com.example.onlineshopapplication.model.Review" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface"
        android:orientation="vertical"
        android:padding="16dp">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/first_and_last_name_hint"
            app:boxStrokeColor="@color/secondary_shrine_pink">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_first_and_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{review.reviewerName}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/your_review_hint"
            app:boxStrokeColor="@color/secondary_shrine_pink">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{review.reviewContent}" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/score_hint">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt.rating"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@{String.valueOf(review.rating)}" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_edit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/neon_fuchsia"
            android:text="@string/edit" />

    </LinearLayout>

</layout>