<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/blanchedalmond"
        android:orientation="vertical"
        tools:context=".view.fragment.LogOutFragment">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:padding="32dp"
            android:text="@string/log_out_question"
            android:textColor="@color/black"
            android:textSize="18sp" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:orientation="horizontal"
            android:padding="32dp">

            <Button
                android:id="@+id/btn_log_out"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginRight="16dp"
                android:backgroundTint="@color/purple_700"
                android:padding="16dp"
                android:text="@string/log_out"
                android:textColor="@color/on_surface" />

            <Button
                android:id="@+id/btn_common"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:backgroundTint="@color/purple_700"
                android:padding="16dp"
                android:text="@string/common"
                android:textColor="@color/on_surface" />


        </LinearLayout>

    </LinearLayout>

</layout>