<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface"
        android:orientation="vertical"
        android:padding="32dp"
        tools:context=".view.fragment.ReviewFragment">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right"
            android:layout_margin="16dp"
            android:text="@string/register_review"
            android:textColor="@color/on_surface"
            android:textSize="18sp" />

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/first_and_last_name_hint"
            app:boxStrokeColor="@color/secondary_shrine_pink">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_first_and_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/your_review_hint"
            app:boxStrokeColor="@color/secondary_shrine_pink">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_your_review"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:hint="@string/score_hint"
            app:boxStrokeColor="@color/secondary_shrine_pink">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/txt_score"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

        </com.google.android.material.textfield.TextInputLayout>

        <Button
            android:id="@+id/btn_register_review"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="32dp"
            android:backgroundTint="@color/neon_fuchsia"
            android:text="@string/register_review" />

    </LinearLayout>

</layout>