<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

    </data>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/surface"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <androidx.appcompat.widget.Toolbar
                android:id="@+id/account_toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/secondary_shrine_pink"
                app:menu="@menu/account_menu" />

            <TextView
                android:id="@+id/txt_email"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="32dp"
                android:textColor="@color/on_surface"
                android:textSize="16sp" />

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="32dp"
                android:src="@drawable/shopping" />

            <Button
                android:id="@+id/btn_review"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="right"
                android:text="@string/review"
                android:textColor="@color/on_surface"
                android:textSize="16sp"
                app:icon="@drawable/ic_comment" />

            <Button
                android:id="@+id/btn_address"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="right"
                android:text="@string/address"
                android:textColor="@color/on_surface"
                android:textSize="16sp"
                app:icon="@drawable/ic_location" />

            <Button
                android:id="@+id/btn_account"
                style="@style/Widget.MaterialComponents.Button.TextButton.Icon"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:gravity="right"
                android:text="@string/account_information"
                android:textColor="@color/on_surface"
                app:icon="@drawable/ic_account" />

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/ic_shopping_bag" />

        </LinearLayout>

    </ScrollView>

</layout>